# Caravel

./: Cargo.toml  Dockerfile  readme.md
src/: config.rs  main.rs  mdlib.rs
static/: layout.css
templates/: base.html.tera  layout.hbs  layout.html.hbs  note.html.hbs  tags.html.hbs
templates/notes/: show.html.tera
templates/tags/: index.html.tera  show.html.tera
