[package]
name = "mdsee"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
comrak = "0.10"
walkdir = "2"
regex = "1.1.9"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]
