[package]
name = "caravel"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
comrak = "0.10"
walkdir = "2"
regex = "1.1.9"
handlebars = "4.1.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]
